correct dark mode buttons for firefox

--- a/tier1.css
+++ b/tier1.css
@@ -70,8 +70,9 @@ select{
 .round{
 	border: 1px solid black;
 	border-radius: 50%;
-	height: 65%;
+	height: 18px;
 	margin: 2px;
+	vertical-align: middle;
 }	
 
 .black{
@@ -149,18 +150,12 @@ select{
   color: gray;
   cursor: pointer;
   padding: 15px;
-}
-
-@media only screen and (max-width: 976px) {
-	.hideDarkButtons{
-		display:none;
-	}	
 }	
 
 @media only screen and (max-width: 942px) {
 	.hide{
 		display:none;
-	}	
+	}
 	.card{
 		flex: 0 1 46%;
 		height: 100%;
@@ -168,6 +163,9 @@ select{
 }
 
 @media only screen and (max-width: 600px) {
+	.hideButtons{
+		display:none;
+	}
 	.main{
 		display: block;
 	}	
